# il

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  AUTHORS.md  CMakeLists.txt  CNAME  COPYING  Doxyfile  LICENSE  Makefile.am  README.md  TODO.md  aminclude.am  appveyor.yml  autogen.sh  configure.ac  dependencies.cmake  doxygen.cfg
cmake/: properties.cmake
include/: il.h  wulk.h
include/il/: api.h  be.h  compiler.h  entity.h  err.h  expr.h  fe.h  hir.h  ir.h  lexer.h  lir.h  mir.h  node.h  opt.h  opts.h  parser.h  program.h  stmt.h  symbol.h  syn.h  token.h  ty.h  type.h
include/il/adt/: deque.h  hash.h  string.h  vector.h
include/il/be/: c.h
include/il/fe/: c.h
include/il/hir/: visitor.h
include/il/lir/: ir.h  visitor.h
include/il/mir/: ir.h  visitor.h
include/il/syn/: span.h
include/il/ty/: ty.h
include/jayl/: array.h  deque.h  ir.h  string.h  symbol.h  token.h
include/stdlib/: stdarg.h
include/wulk/: api.h  be.h  compiler.h  entity.h  expr.h  ir.h  lexer.h  node.h  opts.h  parser.h  program.h  stmt.h  symbol.h  token.h  type.h
lib/: CMakeLists.txt  Makefile.am
lib/ast/: CMakeLists.txt  Makefile.am  ast.h  const.cc  const.h  decl.cc  decl.h  expr.cc  expr.h  file.h  generic.cc  generic.h  id.cc  id.h  ident.h  node.cc  node.h  program.cc  program.h  stmt.cc  stmt.h  type.cc  type.h
lib/cgen/: CMakeLists.txt  Makefile.am  ast_gen.cc  ast_gen.h  cgen.h  closure.cc  closure.h  const.cc  const.h  decl.cc  decl.h  expr.cc  expr.h  file.cc  file.h  file_gen.cc  file_gen.h  generator.cc  generator.h  generic.cc  generic.h  id.cc  id.h  node.cc  node.h  program.cc  program.h  stmt.cc  stmt.h  type.cc  type.h
lib/parse/: CMakeLists.txt  Makefile.am  driver.h  parser.yy  scanner.h  scanner.ll
m4/: ac_doxygen.m4  ac_prog_bison.m4
src/: CMakeLists.txt  Makefile.am  api.h  ast.cc  ast.h  be.c  compiler.c  compiler.h  complex_types.h  context.c  context.cc  context.h  ddc.h  domain.cc  domain.h  driver.cc  driver.h  dyc.h  entities.c  entities.h  entity.c  entity.h  environment.cc  environment.h  error.cc  error.h  expr.c  expr.h  expression.h  exprs.c  exprs.h  fe.c  ffi.h  fir.c  fir.h  fir_ctx.c  fir_ctx.h  fir_entity.h  fir_expr.h  fir_lexer.c  (+143 more)
src/adt/: attr.h  bool.h  deque.h  hash.c  hash.h  hash_set.h  list.h  string.c  string.h  vector.h  xmalloc.c  xmalloc.h
src/ast/: closure.cc  closure.h  const.cc  const.h  decl.cc  decl.h  expr.cc  expr.h  file.cc  file.h  generic.cc  generic.h  ident.cc  ident.h  node.cc  node.h  stmt.cc  stmt.h  type.cc  type.h
src/backend/: CMakeLists.txt  actual.h  backend.cc  backend.h  backend_function.cc  backend_function.h  backend_impl.h  backend_visitor.cc  backend_visitor.h  be.c  be.h  compile.c  compile.h
src/backend/firm/: firm_be.c  firm_be.h
src/backend/graphviz/: dot.h
src/backend/x86_64/: abi.h  elf.c  elf.h  instr.h
src/be/: c.c
src/cli/: jay.c
src/fe/: c.c
src/firm/: opt.c  opt.h
src/frontend/: CMakeLists.txt  clone_generic_functions.cc  clone_generic_functions.h  const_checker.cc  const_checker.h  const_fold.cc  const_fold.h  fe.c  fe.h  fir.c  fir.cc  fir.h  fir_intrinsics.cc  fir_intrinsics.h  fir_printer.cc  fir_printer.h  fir_rewriter.cc  fir_rewriter.h  fir_visitor.cc  fir_visitor.h  frontend.cc  frontend.h  frule.c  frule.h  fval.c  fval.h  infer_element_sources.cc  infer_element_sources.h  ir_emitter.cc  ir_emitter.h  jay_lexer.c  jay_lexer.h  jay_parser.c  jay_parser.h  jayl_parser.c  jayl_parser.h  lexer.c  lexer.h  node.c  node.h  (+9 more)
src/frontend/c/: c_fe.c  c_fe.h  c_lexer.c  c_lexer.h  c_parser.c  c_parser.h  c_pp.c  c_pp.h
src/frontend/jay/: jay_lexer.c  jay_lexer.h  jay_parser.c  jay_parser.h
src/hir/: visitor.c
src/interfaces/: comparable.h  printable.h  uncopyable.h
src/internal/: entity_t.h  expr_t.h  stmt_t.h  type_t.h
src/lir/: visitor.c
src/lower/: CMakeLists.txt  lower.cc  lower.h  lower_accesses.cc  lower_accesses.h  lower_maps.cc  lower_maps.h  lower_prints.cc  lower_prints.h  lower_stencil_assemblies.h  lower_string_ops.cc  lower_string_ops.h
src/lower/index_expressions/: loops.cc  loops.h  lower_index_expressions.cc  lower_index_expressions.h  lower_indexexprs.cc  lower_indexexprs.h  lower_matrix_multiply.cc  lower_matrix_multiply.h  lower_scatter_workspace.cc  lower_scatter_workspace.h  lower_tensor_utils.cc  lower_tensor_utils.h  lower_transpose.cc  lower_transpose.h
src/mir/: visitor.c
src/optimizer/: liveness.h  optimize.c  optimize.h  transform.c  transform.h
src/parser/: declaration.c  declaration.h  eval.c  eval.h  expression.c  expression.h  parse.c  parse.h  statement.c  statement.h  symtab.c  symtab.h  typetree.c  typetree.h
src/preprocessor/: directive.c  directive.h  input.c  input.h  macro.c  macro.h  preprocess.c  strtab.c  strtab.h  tokenize.c  tokenize.h
src/util/: arrays.h  collections.h  compare.cc  compare.h  hash.c  io.c  io.h  name_generator.cc  name_generator.h  opt.c  opt.h  scopedmap.h  string.c  string.h  strtab.c  strtab.h  util.cc  util.h  variadic.h
test/: 001.cc  CMakeLists.txt  Makefile.am  argument.cc  event.c  frame.cc  function.cc  hello.jay  ill.h  lexer.c  main.cc  opt.c  test.h  test.txt
test/gtest/: gtest-all.cc  gtest.h
test/hw/: CMakeLists.txt  hw.jay
tests/: Makefile.am  argument.cc  func.cc  function.cc  interface.cc  test.h  test_syntax.h  test_syntax_interface.cc
