file(GLOB JAYL_HEADERS ${JAYL_HEADERS} *.h)
file(GLOB JAYL_SOURCES ${JAYL_SOURCES} *.cc)

add_subdirectory(target)

set(JAYL_SOURCES ${JAYL_SOURCES} PARENT_SCOPE)
set(JAYL_SOURCES_NO_RTTI ${JAYL_SOURCES_NO_RTTI} PARENT_SCOPE)
set(JAYL_HEADERS ${JAYL_HEADERS} PARENT_SCOPE)
set(JAYL_LIBRARIES ${JAYL_LIBRARIES} PARENT_SCOPE)
set(JAYL_INCLUDE_DIRS ${JAYL_INCLUDE_DIRS} PARENT_SCOPE)
set(JAYL_DEFINITIONS ${JAYL_DEFINITIONS} PARENT_SCOPE)
